# juntando-os-dados-e-adicionando-o-streamlit-muculmanos

./: .~lock.dados.xlsx#  .~lock.scrapImobiliarias2.xlsx#  README.md  app.py  dados.xlsx  exercicio.py  pyproject.toml  scrapImobiliaria.xlsx  scrapImobiliarias2.xlsx
bruno/: bruno.py
buche/: exercicio.py  pyproject.toml  scrapImobiliaria.csv  scrapImobiliaria.xlsx
juan/: juan.py
juntando-os-dados-muculmanos-main/: README.md
juntando-os-dados-muculmanos-main/bruno/: arquivo_imoveis_bruno.csv
juntando-os-dados-muculmanos-main/buche/: app.py  imobiliaria_buche.py  scrapImobiliaria.csv
juntando-os-dados-muculmanos-main/lucas/: real_estate_data.py
lucas/: lucas.py
