[tool.poetry]
name = "imobiliaria scraping"
version = "0.1.0"
description = ""
authors = ["gabriel buche <bielbuche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.1"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
requests = "^2.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
